--- a/src/css/shared-styles.scss
+++ b/src/css/shared-styles.scss
@@ -107,7 +107,7 @@ h2 {
 // Supportive Wrap-Up Styling
 .supportive-wrapup {
   text-align: center;
-  margin: 1.5rem auto 2rem;
+  margin: 1.5rem auto 1.3rem;
   width: 80%;
 
   .supportive-wrapup-intro {
@@ -122,14 +122,15 @@ h2 {
     font-size: large;
     font-weight: 400;
     color: $grayVeryDark;
-    margin: 0.5rem 0 0.5rem;
+    margin: 0.1rem 2rem 0em;
+    padding-top: 0.1rem;
   }
 }
 
 // Binary Choice Buttons
 .binary-choice {
   text-align: center;
-  margin: 2em 5em;
+  margin: 1em 3em 1em;
 
   .choice-prompts {
     display: flex;
